fix overflow css

--- a/static/style.css
+++ b/static/style.css
@@ -175,7 +175,8 @@ label{
 .item  {		
 	border-bottom: 1px solid #e1e1e1;
 	border-left: 1px solid #e1e1e1;			 
-	border-right: 1px solid #e1e1e1;			 
+	border-right: 1px solid #e1e1e1;	
+	clear: both;		 
 }
 
 .summary {			
